fix(style): single selection for same record, overlapping content when scrolling locked message

--- a/apps/web-socket-tester/src/app/messages/messages.component.scss
+++ b/apps/web-socket-tester/src/app/messages/messages.component.scss
@@ -1,4 +1,11 @@
 .notifications {
   position: relative;
-  top: 30vh;
+  top: 13vh;
+  max-width: fit-content;
+  width: 60vw;
+  margin-left: auto;
+}
+
+.row-hover {
+  background-color: #1e1e1e !important;
 }
